src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-dhF500-b-wfsBN-t.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nconfig:\nwindow-rule {\n    open-fullscreen false\n    open-maximized true\n    default-window-height { fixed 500; }\n    border { on; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 1231 × 500, bounds: 1231 × 680, states: []

post-map configures:
size: 1231 × 500, bounds: 1231 × 680, states: [Activated]
